apps/pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-pdf
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3005
      targetPort: 3005
