apps/pdf/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-pdf-slice
  labels:
    kubernetes.io/service-name: external-pdf
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3005
endpoints:
  - addresses:
      - "192.168.88.210"
    conditions:
      ready: true
